--- a/css/cores/hsl.html
+++ b/css/cores/hsl.html
@@ -10,20 +10,27 @@
         .icon {
             font-size: 50px;
             margin: 30px;
-            transition: transform 2s;
+            transition: transform 0.5s;
         }
 
-        .icon:hover{
-            transform: scale(3) rotate(360deg);
+        .icon:hover {
+            transform: scale(1.2);
+        }
+
+        .cor-hsl {
+            color: hsl(151, 41%, 41%);
+        }
+
+        .cor-hsla {
+            color: hsla(151, 41%, 41%, 0.68);
         }
     </style>
 
 </head>
 <body>
 
-<i class="material-icons icon">home</i>
-
-<i class="material-icons icon">star</i>
+<i class="material-icons icon cor-hsl">settings</i>
+<i class="material-icons icon cor-hsla">settings</i>
 
 </body>
 </html>
