--- a/css/cores/rbg.html
+++ b/css/cores/rbg.html
@@ -10,20 +10,27 @@
         .icon {
             font-size: 50px;
             margin: 30px;
-            transition: transform 2s;
+            transition: transform 0.5s;
         }
 
-        .icon:hover{
-            transform: scale(3) rotate(360deg);
+        .icon:hover {
+            transform: scale(1.2);
+        }
+
+        .cor-hsl {
+            color: rgb(126, 38, 38);
+        }
+
+        .cor-hsla {
+            color: rgba(236, 91, 91, 0.42);
         }
     </style>
 
 </head>
 <body>
 
-<i class="material-icons icon">home</i>
-
-<i class="material-icons icon">star</i>
+<i class="material-icons icon cor-rgb">settings</i>
+<i class="material-icons icon cor-rgba">settings</i>
 
 </body>
 </html>
