--- a/css/flexbox/align-items/align-items.html
+++ b/css/flexbox/align-items/align-items.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="align-items.css">
 </head>
 <body>
-$END$
+
+<div class="container">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>align-items-start</h2>
+<div class="container align-items-start">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+
+<h2>align-items-end</h2>
+<div class="container align-items-end">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+
+<h2>align-items-center</h2>
+<div class="container align-items-center">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+
+<h2>align-items-baseline</h2>
+<div class="container align-items-baseline">
+    <div style="font-size: 2rem" class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div style="font-size: 5rem" class="bloco-03">3</div>
+</div>
+
+<h2>align-items-stretch</h2>
+<div class="container align-items-stretch">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
 </body>
 </html>
