--- a/css/flexbox/justify-content/justify-content.html
+++ b/css/flexbox/justify-content/justify-content.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="justify-content.css">
 </head>
 <body>
-$END$
+
+<div class="container">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>justify-content-start</h2>
+<div class="container justify-content-start">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+<h2>justify-content-end</h2>
+<div class="container justify-content-end">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+<h2>justify-content-center</h2>
+<div class="container justify-content-center">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+<h2>justify-content-space-between</h2>
+<div class="container justify-content-space-between">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+<h2>justify-content-space-around</h2>
+<div class="container justify-content-space-around">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+<h2>justify-content-space-evenly</h2>
+<div class="container justify-content-space-evenly">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
 </body>
 </html>
