--- a/css/flexbox/base.html
+++ b/css/flexbox/base.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <link rel="stylesheet" href="base.css">
 </head>
 <body>
-$END$
+
+<div class="container">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
 </body>
 </html>
