--- a/css/flexbox/flex-direction/flex-direction.html
+++ b/css/flexbox/flex-direction/flex-direction.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="flex-direction.css">
 </head>
 <body>
-$END$
+
+<div class="container">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>flex-direction-column</h2>
+<div class="container flex-direction-column">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>flex-direction-row</h2>
+<div class="container flex-direction-row">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>flex-direction-column-reverse</h2>
+<div class="container flex-direction-column-reverse">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
+<h2>flex-direction-row-reverse</h2>
+<div class="container flex-direction-row-reverse">
+    <div class="bloco-01">1</div>
+    <div class="bloco-02">2</div>
+    <div class="bloco-03">3</div>
+</div>
+
 </body>
 </html>
