--- a/css/tabela/tabela.html
+++ b/css/tabela/tabela.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <link rel="stylesheet" href="tabela.css">
 </head>
 <body>
-$END$
+
+<div class="info-aluno">
+    <h2>Informações do Aluno</h2>
+    <div><strong>Nome do Aluno:</strong> Douglas dos Santos</div>
+    <div><strong>Matrícula:</strong> 000000</div>
+    <div><strong>Turma:</strong> MDS-02</div>
+</div>
+
+<table>
+    <caption><h1>BOLETIM ESCOLAR</h1></caption>
+    <thead>
+    <tr>
+        <td rowspan="2">Disciplina</td>
+        <td colspan="4">Bimestres</td>
+        <td rowspan="2">Media Final</td>
+        <td rowspan="2">Situação</td>
+    </tr>
+    <tr>
+        <td>1º</td>
+        <td>2º</td>
+        <td>3º</td>
+        <td>4º</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Lingua Portuguesa</td>
+        <td>6.0</td>
+        <td>5.5</td>
+        <td>7.0</td>
+        <td>8.5</td>
+        <td class="media">6.8</td>
+        <td class="aprovado">Aprovado</td>
+    </tr>
+
+    <tr>
+        <td>Matematica</td>
+        <td>6.0</td>
+        <td>5.5</td>
+        <td>7.0</td>
+        <td>8.5</td>
+        <td class="media">6.8</td>
+        <td class="reprovado">Reprovado</td>
+    </tr>
+
+    <tr>
+        <td>Historia</td>
+        <td>6.0</td>
+        <td>5.5</td>
+        <td>7.0</td>
+        <td>8.5</td>
+        <td class="media">6.8</td>
+        <td class="aprovado">Aprovado</td>
+    </tr>
+
+    <tr>
+        <td>Geografia</td>
+        <td>6.0</td>
+        <td>5.5</td>
+        <td>7.0</td>
+        <td>8.5</td>
+        <td class="media">6.8</td>
+        <td class="reprovado">Reprovado</td>
+    </tr>
+
+    </tbody>
+    <tfoot class="footer">
+    <tr>
+        <td colspan="7">
+            <p>Escola Estadual Ensino Medio Integrado</p>
+            <p>Secretaria de Educação - 2025</p>
+        </td>
+    </tr>
+
+    </tfoot>
+</table>
+
 </body>
 </html>
