--- a/css/bootstrap/form/form.html
+++ b/css/bootstrap/form/form.html
@@ -14,17 +14,17 @@
 <div class="container-fluid">
     <div class="row">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-3">
                 <label for="exampleFormControlInput1" class="form-label">Nome: </label>
                 <input type="email" class="form-control" id="name" placeholder="Digite seu nome">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-3">
                 <label for="exampleFormControlInput1" class="form-label">Senha: </label>
                 <input type="email" class="form-control" id="password" placeholder="Digite sua senha">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-3">
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
