--- a/css/bootstrap/table/table.html
+++ b/css/bootstrap/table/table.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <style>
+        .table-dark-teste {
+            background-color: rgba(108, 152, 200, 0.56);!important;
+        }
+    </style>
+
 </head>
 <body>
 
@@ -16,9 +23,9 @@
     <div><strong>Turma:</strong> MDS-02</div>
 </div>
 
-<table class="table table-bordered table-hover table-striped table-dark">
+<table class="table table-bordered table-hover table-striped">
     <caption><h1>BOLETIM ESCOLAR</h1></caption>
-    <thead>
+    <thead style="background-color: lightblue;">
     <tr>
         <td rowspan="2">Disciplina</td>
         <td colspan="4">Bimestres</td>
