--- a/css/exercicios/curriculo/curriculo.html
+++ b/css/exercicios/curriculo/curriculo.html
@@ -1,64 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <!--    <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.min.css">-->
+    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap-utilities.min.css"> -->
+
     <link rel="stylesheet" href="curriculo.css">
 </head>
+
 <body>
 
-<div class="container-fluid">
-    <h1>Eduardo Braga</h1>
-    <h2>Programador</h2>
+    <div class="container-fluid" id="container-fluid">
+        <h1>Eduardo Braga</h1>
+        <h2>Programador</h2>
 
-    <div class="row">
-        <div class="dados-pessoais col-sm-5 col-md-3">
-            <h3 class="header">Dados Pessoais</h3>
+        <div class="row">
+            <div class="dados-pessoais col-sm-5 col-md-3">
+                <h3 class="header">Dados Pessoais</h3>
 
-            <div>
-                <h4>Endereço:</h4>
-                <p>Av. das Americas 3560</p>
+                <div>
+                    <h4>Endereço:</h4>
+                    <p>Av. das Americas 3560</p>
+                </div>
+
+                <div>
+                    <h4>Telefone: </h4>
+                    <p>(92) 9 9492 - 9568</p>
+                </div>
             </div>
 
-            <div>
-                <h4>Telefone: </h4>
-                <p>(92) 9 9492 - 9568</p>
-            </div>
-        </div>
+            <div class="perfil col-sm col-md">
+                <div>
+                    <h3 class="header">Perfil</h3>
 
-        <div class="perfil col-sm col-md">
-            <div>
-                <h3 class="header">Perfil</h3>
+                    <p>
+                        Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem
+                        sendo
+                        utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
+                        embaralhou
+                        para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como
+                        também
+                        ao
+                        salto
+                        para a editoração eletrônica, permanecendo essencialmente inalterado.
+                    </p>
+                </div>
 
-                <p>
-                    Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo
-                    utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
-                    embaralhou
-                    para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao
-                    salto
-                    para a editoração eletrônica, permanecendo essencialmente inalterado.
-                </p>
-            </div>
-
-            <div>
-                <h3 class="header">Experiência</h3>
-                <div class="exp">
-                    <div class="row">
-                        <div class="col-9">Programador Pleno</div>
-                        <div class="col-3">FPFTech</div>
+                <div>
+                    <h3 class="header">Experiência</h3>
+                    <div class="exp">
+                        <div class="row">
+                            <div class="col-9">Programador Pleno</div>
+                            <div class="col-3">FPFTech</div>
+                        </div>
+                        <p>Análise de Requisitos</p>
+                        <p>Análise de Requisitos</p>
+                        <p>Análise de Requisitos</p>
+                        <p>Análise de Requisitos</p>
                     </div>
-                    <p>Análise de Requisitos</p>
-                    <p>Análise de Requisitos</p>
-                    <p>Análise de Requisitos</p>
-                    <p>Análise de Requisitos</p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 </body>
+
 </html>
