--- a/javascript/eventos/click/eventos.html
+++ b/javascript/eventos/click/eventos.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modificadores</title>
+    <title>Document</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 
 <body>
+
     <div class="container">
-        <div id="titleDiv">Título Principal</div>
 
-        <p class="paragraph">Este é o primeiro parágrafo</p>
-        <p class="paragraph">Este é o segundo parágrafo</p>
+        <button class="btn btn-info" id="btnButton">Event Listener</button>
 
-        <label for="inputNumber">Número: </label><br>
-        <input type="text" name="inputNumber" id="inputNumber" placeholder="Digite um número">
+        <div id="divResult" class="bg-primary text-center text-bg-primary fs-1 m-3"></div>
+
+        <script src="eventos.js"></script>
     </div>
 
-    <script src="dom.js"></script>
 </body>
 
 </html>
